--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="src\GL\GPUResource\Texture\Texture2D.cpp" />
     <ClCompile Include="src\GL\GPUResource\Texture\TextureBuffer.cpp" />
     <ClCompile Include="src\GL\System\GPUOperateSystem.cpp" />
+    <ClCompile Include="src\GL\System\Input.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Plugins\glad\src\glad.c" />
     <ClCompile Include="src\Plugins\imgui\imgui.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="src\GL\GPUResource\Texture\TextureBuffer.h" />
     <ClInclude Include="src\GL\Rescale.h" />
     <ClInclude Include="src\GL\System\GPUOperateSystem.h" />
+    <ClInclude Include="src\GL\System\Input.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E77D317D-60E5-4CB6-9ED6-61AE661DD35A}</ProjectGuid>
