--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -97,7 +97,9 @@
     <ClCompile Include="src\Plugins\glad\src\glad.c" />
     <ClCompile Include="src\Plugins\imgui\imgui.cpp" />
     <ClCompile Include="src\Plugins\imgui\imgui_draw.cpp" />
-    <ClCompile Include="src\Plugins\imgui\imgui_impl_glfw_gl3.cpp" />
+    <ClCompile Include="src\Plugins\imgui\imgui_impl_glfw.cpp" />
+    <ClCompile Include="src\Plugins\imgui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="src\Plugins\imgui\imgui_widgets.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Browser\Components\Animation\Animator.h" />
@@ -182,6 +184,11 @@
     <ClInclude Include="src\GL\Rescale.h" />
     <ClInclude Include="src\GL\System\GPUOperateSystem.h" />
     <ClInclude Include="src\GL\System\Input.h" />
+    <ClInclude Include="src\Plugins\imgui\imconfig.h" />
+    <ClInclude Include="src\Plugins\imgui\imgui.h" />
+    <ClInclude Include="src\Plugins\imgui\imgui_impl_glfw.h" />
+    <ClInclude Include="src\Plugins\imgui\imgui_impl_opengl3.h" />
+    <ClInclude Include="src\Plugins\imgui\imgui_internal.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E77D317D-60E5-4CB6-9ED6-61AE661DD35A}</ProjectGuid>
