--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -189,6 +189,9 @@
     <ClInclude Include="src\Plugins\imgui\imgui_impl_glfw.h" />
     <ClInclude Include="src\Plugins\imgui\imgui_impl_opengl3.h" />
     <ClInclude Include="src\Plugins\imgui\imgui_internal.h" />
+    <ClInclude Include="src\Plugins\imgui\imstb_rectpack.h" />
+    <ClInclude Include="src\Plugins\imgui\imstb_textedit.h" />
+    <ClInclude Include="src\Plugins\imgui\imstb_truetype.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E77D317D-60E5-4CB6-9ED6-61AE661DD35A}</ProjectGuid>
