--- a/ShaderBrowser/ShaderBrowser.vcxproj.filters
+++ b/ShaderBrowser/ShaderBrowser.vcxproj.filters
@@ -357,8 +357,10 @@
     <ClCompile Include="src\Browser\Components\Render\Commands\MeshRenderCommand.cpp">
       <Filter>src\Browser\Components\Render\Commands</Filter>
     </ClCompile>
-    <ClCompile Include="src\GL\GPUResource\Texture\FrameBuffer.cpp">
-      <Filter>src\GL\GPUResource\Texture</Filter>
+    <ClCompile Include="src\GL\GPUOperateCommand\GPUOperateRenderTextureCommand.cpp" />
+    <ClCompile Include="src\GL\GPUResource\Texture\RenderTexture.cpp" />
+    <ClCompile Include="src\Browser\Components\Render\Commands\RenderTextureCommand.cpp">
+      <Filter>src\Browser\Components\Render\Commands</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -638,8 +640,13 @@
     <ClInclude Include="src\Browser\Components\Render\Commands\MeshRenderCommand.h">
       <Filter>src\Browser\Components\Render\Commands</Filter>
     </ClInclude>
-    <ClInclude Include="src\GL\GPUResource\Texture\FrameBuffer.h">
-      <Filter>src\GL\GPUResource\Texture</Filter>
+    <ClInclude Include="src\GL\GPUOperateCommand\GPUOperateRenderTextureCommand.h" />
+    <ClInclude Include="src\GL\GPUResource\Texture\RenderTexture.h" />
+    <ClInclude Include="src\Browser\Components\Render\Commands\BaseRenderCommand.h">
+      <Filter>src\Browser\Components\Render\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Browser\Components\Render\Commands\RenderTextureCommand.h">
+      <Filter>src\Browser\Components\Render\Commands</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
