--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -83,7 +83,9 @@
     <ClCompile Include="src\GL\GPUOperateCommand\GPUOperateRenderTextureCommand.cpp" />
     <ClCompile Include="src\GL\GPUOperateCommand\GPUOperateTexture2DCommand.cpp" />
     <ClCompile Include="src\GL\GPUOperateCommand\GPUOperateTextureBufferCommand.cpp" />
+    <ClCompile Include="src\GL\GPUOperateCommand\GPUOperateUniformBufferCommand.cpp" />
     <ClCompile Include="src\GL\GPUResource\BaseGPUResource.cpp" />
+    <ClCompile Include="src\GL\GPUResource\Buffer\UniformBuffer.cpp" />
     <ClCompile Include="src\GL\GPUResource\Model\Mesh.cpp" />
     <ClCompile Include="src\GL\GPUResource\Model\Model.cpp" />
     <ClCompile Include="src\GL\GPUResource\Model\Skeleton.cpp" />
@@ -179,7 +181,9 @@
     <ClInclude Include="src\GL\GPUOperateCommand\GPUOperateRenderTextureCommand.h" />
     <ClInclude Include="src\GL\GPUOperateCommand\GPUOperateTexture2DCommand.h" />
     <ClInclude Include="src\GL\GPUOperateCommand\GPUOperateTextureBufferCommand.h" />
+    <ClInclude Include="src\GL\GPUOperateCommand\GPUOperateUniformBufferCommand.h" />
     <ClInclude Include="src\GL\GPUResource\BaseGPUResource.h" />
+    <ClInclude Include="src\GL\GPUResource\Buffer\UniformBuffer.h" />
     <ClInclude Include="src\GL\GPUResource\Model\Mesh.h" />
     <ClInclude Include="src\GL\GPUResource\Model\Model.h" />
     <ClInclude Include="src\GL\GPUResource\Model\Skeleton.h" />
